--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 />
                 <div class="float-left">
                   <strong id="temperature"></strong
-                  ><span class="units"> °C</span>
+                  ><span class="units"> °C <a href="#">°F </a></span>
                 </div>
               </div>
             </div>
