--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
                 />
                 <div class="float-left">
                   <strong id="temperature"></strong
-                  ><span class="units"> °C | <a href="#">°F </a></span>
+                  ><span class="units">
+                    °C | <a href="fahrenheit-link">°F </a></span
+                  >
                 </div>
               </div>
             </div>
