--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
           </form>
           <div class="overview">
-            <h1 id="city">New York</h1>
+            <h1 id="city"></h1>
             <ul>
               <li>Last updated: <span id="date"></span></li>
               <li id="description"></li>
@@ -48,17 +48,12 @@
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                  alt="Clear"
-                  id="icon"
-                  class="float-left"
-                />
+                <img src="" alt="Clear" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"> </strong
                   ><span class="units">
                     <a href="#" id="celsius-link" class="active">°C</a>
-                    | <a href="#" id="fahrenheit-link">°F </a></span
+                    | <a href="#" id="fahrenheit-link">°F</a></span
                   >
                 </div>
               </div>
@@ -66,7 +61,7 @@
             <div class="col-6">
               <ul>
                 <li>Humidity: <span id="humidity"></span>%</li>
-                <li>Wind: <span id="wind"></span> m/h</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
           </div>
