--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
               <div class="clearfix weather-temperature">
                 <img src="" alt="Clear" id="icon" class="float-left" />
                 <div class="float-left">
-                  <strong id="temperature"> </strong
+                  <strong class="temperature" id="current-temp"> </strong
                   ><span class="units">
-                    <a href="#" id="celsius-link" class="active">°C</a>
-                    | <a href="#" id="fahrenheit-link">°F</a></span
+                    <a href="#" id="celsius" class="active">°C</a>
+                    | <a href="#" id="fahrenheit">°F</a></span
                   >
                 </div>
               </div>
