--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <div class="float-left">
                   <strong class="temperature" id="current-temp"> </strong
                   ><span class="units">
-                    <a href="#" id="celsius" class="active">°C</a>
-                    | <a href="#" id="fahrenheit">°F</a></span
+                    <a href="#" id="celsius-name" class="active">°C</a>
+                    | <a href="#" id="fahrenheit-name">°F</a></span
                   >
                 </div>
               </div>
