--- a/index.html
+++ b/index.html
@@ -50,11 +50,8 @@
               <div class="clearfix weather-temperature">
                 <img src="" alt="Clear" id="icon" class="float-left" />
                 <div class="float-left">
-                  <strong class="temperature" id="current-temp"> </strong
-                  ><span class="units">
-                    <a href="#" id="celsius-name" class="active">°C</a>
-                    | <a href="#" id="fahrenheit-name">°F</a></span
-                  >
+                  <strong id="current-temp"> </strong
+                  ><span class="units"> °F </span>
                 </div>
               </div>
             </div>
